[package]
name = "sage-yew"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0-beta.1"
hex = "0.4"
sage-core = { path = "../sage-core" }
serde_json = "1.0"
web-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }